# pan-scm-cicd

./: .gitignore  .pre-commit-config.yaml  .secrets.yaml.example  .windsurfrules  EDUCATIONAL_README.md  Makefile  README.md  pyproject.toml  pytest.ini  settings.yaml
.github/workflows/: scm-config.yml  security-rules.yml
config/address-objects/: address_objects.yaml
config/security-rules/: example.yaml  folder-cypress.yaml  folder-texas.yaml
examples/: security_rules.yaml  test-rule.yaml
src/scm_cicd/: __init__.py  address.py  cli.py  config.py  security_rules.py
tests/: conftest.py
tests/integration/: test_cli_e2e.py  test_security_rules_integration.py
tests/unit/: test_cli.py  test_security_rules.py
