[tool.poetry]
name = "pan-scm-cicd"
version = "0.1.0"
description = "CICD Pipeline for Palo Alto Networks Strata Cloud Manager"
authors = ["Calvin Remsburg <dev@cdot.io>"]
readme = "README.md"
packages = [{include = "scm_cicd", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pan-scm-sdk = "^0.3.14"
dynaconf = {extras = ["yaml"], version = "^3.2.4"}
pydantic = "^2.6.1"
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
factory-boy = "^3.3.0"
ruff = "^0.1.9"
flake8 = "^7.0.0"
black = "^23.12.0"
mypy = "^1.7.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
checkov = "^3.1.10"

[tool.poetry.scripts]
scm-cicd = "scm_cicd.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 128
target-version = "py312"
select = ["E", "F", "B", "I", "N", "C"]
ignore = []

[tool.flake8]
max-line-length = 128
